// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features for the component generation when features are enabled as { tests: false, scss: false, storybook: false, intl: false } 1`] = `
Object {
  "MockComponent.tsx": "import React from 'react';



/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
}
`;

exports[`Features for the component generation when features are enabled as { tests: false, scss: false, storybook: false, intl: true } 1`] = `
Object {
  "MockComponent.tsx": "import React from 'react';

import { useIntl } from 'react-intl'
import messages from './messages'

/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    const { formatMessage } = useIntl();
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
  "messages.ts": "import { defineMessages } from 'react-intl';
    
export default defineMessages({})",
}
`;

exports[`Features for the component generation when features are enabled as { tests: false, scss: false, storybook: true, intl: false } 1`] = `
Object {
  "MockComponent.stories.tsx": "import React from 'react';
import MockComponent from \\"./MockComponent\\";
    
export default {
    component: MockComponent,
    title: \\"Mock Component\\"
}

export const InitialImplementation = (...args: any) => <MockComponent {...args}/>;",
  "MockComponent.tsx": "import React from 'react';



/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
}
`;

exports[`Features for the component generation when features are enabled as { tests: false, scss: false, storybook: true, intl: true } 1`] = `
Object {
  "MockComponent.stories.tsx": "import React from 'react';
import MockComponent from \\"./MockComponent\\";
    
export default {
    component: MockComponent,
    title: \\"Mock Component\\"
}

export const InitialImplementation = (...args: any) => <MockComponent {...args}/>;",
  "MockComponent.tsx": "import React from 'react';

import { useIntl } from 'react-intl'
import messages from './messages'

/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    const { formatMessage } = useIntl();
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
  "messages.ts": "import { defineMessages } from 'react-intl';
    
export default defineMessages({})",
}
`;

exports[`Features for the component generation when features are enabled as { tests: false, scss: true, storybook: false, intl: false } 1`] = `
Object {
  "MockComponent.module.scss": "",
  "MockComponent.tsx": "import React from 'react';
import Styles from './MockComponent.module.scss';


/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
}
`;

exports[`Features for the component generation when features are enabled as { tests: false, scss: true, storybook: false, intl: true } 1`] = `
Object {
  "MockComponent.module.scss": "",
  "MockComponent.tsx": "import React from 'react';
import Styles from './MockComponent.module.scss';
import { useIntl } from 'react-intl'
import messages from './messages'

/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    const { formatMessage } = useIntl();
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
  "messages.ts": "import { defineMessages } from 'react-intl';
    
export default defineMessages({})",
}
`;

exports[`Features for the component generation when features are enabled as { tests: false, scss: true, storybook: true, intl: false } 1`] = `
Object {
  "MockComponent.module.scss": "",
  "MockComponent.stories.tsx": "import React from 'react';
import MockComponent from \\"./MockComponent\\";
    
export default {
    component: MockComponent,
    title: \\"Mock Component\\"
}

export const InitialImplementation = (...args: any) => <MockComponent {...args}/>;",
  "MockComponent.tsx": "import React from 'react';
import Styles from './MockComponent.module.scss';


/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
}
`;

exports[`Features for the component generation when features are enabled as { tests: false, scss: true, storybook: true, intl: true } 1`] = `
Object {
  "MockComponent.module.scss": "",
  "MockComponent.stories.tsx": "import React from 'react';
import MockComponent from \\"./MockComponent\\";
    
export default {
    component: MockComponent,
    title: \\"Mock Component\\"
}

export const InitialImplementation = (...args: any) => <MockComponent {...args}/>;",
  "MockComponent.tsx": "import React from 'react';
import Styles from './MockComponent.module.scss';
import { useIntl } from 'react-intl'
import messages from './messages'

/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    const { formatMessage } = useIntl();
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
  "messages.ts": "import { defineMessages } from 'react-intl';
    
export default defineMessages({})",
}
`;

exports[`Features for the component generation when features are enabled as { tests: true, scss: false, storybook: false, intl: false } 1`] = `
Object {
  "MockComponent.test.tsx": "import React from 'react';
import { render } from '@testing-library/react';

import Component from './MockComponent';

it('Should at least render :)', () => {
    render(<Component/>);
})",
  "MockComponent.tsx": "import React from 'react';



/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
}
`;

exports[`Features for the component generation when features are enabled as { tests: true, scss: false, storybook: false, intl: true } 1`] = `
Object {
  "MockComponent.test.tsx": "import React from 'react';
import { render } from '@testing-library/react';
import { IntlProvider } from 'react-intl';
import Component from './MockComponent';

it('Should at least render :)', () => {
    render(<IntlProvider locale=\\"pt-br\\">
        <Component/>
    </IntlProvider>);
})",
  "MockComponent.tsx": "import React from 'react';

import { useIntl } from 'react-intl'
import messages from './messages'

/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    const { formatMessage } = useIntl();
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
  "messages.ts": "import { defineMessages } from 'react-intl';
    
export default defineMessages({})",
}
`;

exports[`Features for the component generation when features are enabled as { tests: true, scss: false, storybook: true, intl: false } 1`] = `
Object {
  "MockComponent.stories.tsx": "import React from 'react';
import MockComponent from \\"./MockComponent\\";
    
export default {
    component: MockComponent,
    title: \\"Mock Component\\"
}

export const InitialImplementation = (...args: any) => <MockComponent {...args}/>;",
  "MockComponent.test.tsx": "import React from 'react';
import { render } from '@testing-library/react';

import { InitialImplementation as Component } from './MockComponent.stories';

it('Should at least render :)', () => {
    render(<Component/>);
})",
  "MockComponent.tsx": "import React from 'react';



/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
}
`;

exports[`Features for the component generation when features are enabled as { tests: true, scss: false, storybook: true, intl: true } 1`] = `
Object {
  "MockComponent.stories.tsx": "import React from 'react';
import MockComponent from \\"./MockComponent\\";
    
export default {
    component: MockComponent,
    title: \\"Mock Component\\"
}

export const InitialImplementation = (...args: any) => <MockComponent {...args}/>;",
  "MockComponent.test.tsx": "import React from 'react';
import { render } from '@testing-library/react';
import { IntlProvider } from 'react-intl';
import { InitialImplementation as Component } from './MockComponent.stories';

it('Should at least render :)', () => {
    render(<IntlProvider locale=\\"pt-br\\">
        <Component/>
    </IntlProvider>);
})",
  "MockComponent.tsx": "import React from 'react';

import { useIntl } from 'react-intl'
import messages from './messages'

/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    const { formatMessage } = useIntl();
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
  "messages.ts": "import { defineMessages } from 'react-intl';
    
export default defineMessages({})",
}
`;

exports[`Features for the component generation when features are enabled as { tests: true, scss: true, storybook: false, intl: false } 1`] = `
Object {
  "MockComponent.module.scss": "",
  "MockComponent.test.tsx": "import React from 'react';
import { render } from '@testing-library/react';

import Component from './MockComponent';

it('Should at least render :)', () => {
    render(<Component/>);
})",
  "MockComponent.tsx": "import React from 'react';
import Styles from './MockComponent.module.scss';


/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
}
`;

exports[`Features for the component generation when features are enabled as { tests: true, scss: true, storybook: false, intl: true } 1`] = `
Object {
  "MockComponent.module.scss": "",
  "MockComponent.test.tsx": "import React from 'react';
import { render } from '@testing-library/react';
import { IntlProvider } from 'react-intl';
import Component from './MockComponent';

it('Should at least render :)', () => {
    render(<IntlProvider locale=\\"pt-br\\">
        <Component/>
    </IntlProvider>);
})",
  "MockComponent.tsx": "import React from 'react';
import Styles from './MockComponent.module.scss';
import { useIntl } from 'react-intl'
import messages from './messages'

/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    const { formatMessage } = useIntl();
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
  "messages.ts": "import { defineMessages } from 'react-intl';
    
export default defineMessages({})",
}
`;

exports[`Features for the component generation when features are enabled as { tests: true, scss: true, storybook: true, intl: false } 1`] = `
Object {
  "MockComponent.module.scss": "",
  "MockComponent.stories.tsx": "import React from 'react';
import MockComponent from \\"./MockComponent\\";
    
export default {
    component: MockComponent,
    title: \\"Mock Component\\"
}

export const InitialImplementation = (...args: any) => <MockComponent {...args}/>;",
  "MockComponent.test.tsx": "import React from 'react';
import { render } from '@testing-library/react';

import { InitialImplementation as Component } from './MockComponent.stories';

it('Should at least render :)', () => {
    render(<Component/>);
})",
  "MockComponent.tsx": "import React from 'react';
import Styles from './MockComponent.module.scss';


/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
}
`;

exports[`Features for the component generation when features are enabled as { tests: true, scss: true, storybook: true, intl: true } 1`] = `
Object {
  "MockComponent.module.scss": "",
  "MockComponent.stories.tsx": "import React from 'react';
import MockComponent from \\"./MockComponent\\";
    
export default {
    component: MockComponent,
    title: \\"Mock Component\\"
}

export const InitialImplementation = (...args: any) => <MockComponent {...args}/>;",
  "MockComponent.test.tsx": "import React from 'react';
import { render } from '@testing-library/react';
import { IntlProvider } from 'react-intl';
import { InitialImplementation as Component } from './MockComponent.stories';

it('Should at least render :)', () => {
    render(<IntlProvider locale=\\"pt-br\\">
        <Component/>
    </IntlProvider>);
})",
  "MockComponent.tsx": "import React from 'react';
import Styles from './MockComponent.module.scss';
import { useIntl } from 'react-intl'
import messages from './messages'

/**
 * A component to check that everything is fine
 **/
export default function MockComponent() {
    const { formatMessage } = useIntl();
    return <>MockComponent</>;
}",
  "index.tsx": "export { default } from './MockComponent';
",
  "messages.ts": "import { defineMessages } from 'react-intl';
    
export default defineMessages({})",
}
`;
